syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.hashsploit.clank.server.rpc";
option java_outer_classname = "ClankMlsProto";

package clank;

// This is the Clank Medius Lobby Server Service.
service ClankMlsService {
	
	// This RPC endpoint updates player information.
	rpc PlayerUpdate(PlayerUpdateRequest) returns (PlayerUpdateResponse) {}
	
	// This RPC endpoint updates world information.
	rpc WorldUpdate(WorldUpdateRequest) returns (WorldUpdateResponse) {}
	
}

message PlayerUpdateRequest {
	int32 account_id = 1;
	int32 world_id = 2;
	enum PlayerStatus {
		DISCONNECTED = 0;
		CONNECTED = 1;
		STAGING = 2;
		ACTIVE = 3;
	}
}

message WorldUpdateRequest {
	int32 world_id = 1;
	enum WorldStatus {
		CREATED = 0;
		STAGING = 1;
		ACTIVE = 2;
		DESTROYED = 3;
	}
}

message PlayerUpdateResponse {
	bool success = 1;
}

message WorldUpdateResponse {
	bool success = 1;
}

